--- a/config-json/appdetails.json
+++ b/config-json/appdetails.json
@@ -16,11 +16,11 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Unknown","country":"Japan","image":"japan","ip":"115.176.77.118","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Unknown","country":"Vietnam","image":"vietnam","ip":"58.187.71.171","active":"true","signal":"b"},
-    {"id":2, "file":1, "city":"Unknown","country":"South Korea","image":"southkorea","ip":"121.132.208.176","active":"true","signal":"c"},
-    {"id":2, "file":1, "city":"Unknown","country":"United States","image":"unitedstates","ip":"71.59.237.21","active":"true","signal":"d"},
-    {"id":2, "file":1, "city":"Unknown","country":"Singapore","image":"singapore","ip":"220.255.174.58","active":"true","signal":"e"}
+    {"id":0, "file":0, "city":"Unknown","country":"Japan","image":"japan","ip":"219.100.37.145","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"Unknown","country":"Vietnam","image":"vietnam","ip":"115.75.189.141","active":"true","signal":"b"},
+    {"id":2, "file":1, "city":"Unknown","country":"South Korea","image":"southkorea","ip":"210.123.254.160","active":"true","signal":"c"},
+    {"id":2, "file":1, "city":"Unknown","country":"United States","image":"unitedstates","ip":"71.115.133.133","active":"true","signal":"d"},
+    {"id":2, "file":1, "city":"Unknown","country":"Sweden","image":"sweden","ip":"81.16.173.28","active":"true","signal":"e"}
 
   ]
 }
